--- a/style/style.css
+++ b/style/style.css
@@ -62,6 +62,21 @@ body{
     font-family: var(--fonte-secundaria);
 }
 
+.corpo__voltar{
+    position: fixed;
+    bottom: 10px;
+    right: 10px;
+    background-color: var(--cor-fundo-topico);
+    border-radius: 100%;
+    border: 2px solid var(--cor-texto);
+    padding: 5px;
+}
+
+.voltar__img{
+    height: 40px;
+    width: 40px;
+}
+
 .corpo__intro{
     text-align: justify;
 }
